# poc-bazel

./: .gitignore  README.md  WORKSPACE.bazel
py/: BUILD.bazel  README.md  pyproject.toml  requirements_lock.txt
py/app/: BUILD.bazel  main.py
py/jhe/: BUILD.bazel
py/jhe/common/: app.py
py/lib/: BUILD.bazel
rpkg/: BUILD.bazel
rpkg/jhe/: DESCRIPTION
rpkg/jhe/R/: hello.R
